src/test/ui/generic-associated-types/method-unsatified-assoc-type-predicate.stderr
error[E0599]: no method named `f` found for struct `S` in the current scope
  --> $DIR/method-unsatified-assoc-type-predicate.rs:30:7
   |
LL | struct S;
   | -------- method `f` not found for this struct
...
LL |     a.f();
   |       ^ method not found in `S`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `M` defines an item `f`, perhaps you need to implement it
  --> $DIR/method-unsatified-assoc-type-predicate.rs:10:1
   |
LL | trait M {
   | ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
